--- a/example.ipynb
+++ b/example.ipynb
@@ -163,10 +163,7 @@
    "execution_count": null,
    "id": "333cdc4a3174804d",
    "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -179,9 +176,6 @@
    "metadata": {
     "collapsed": false,
     "editable": true,
-    "jupyter": {
-     "outputs_hidden": false
-    },
     "slideshow": {
      "slide_type": ""
     },
@@ -249,7 +243,7 @@
     "\n",
     "Now, we'll show how to use LlamaIndex with your llamafile to build a research assistant to help you learn about some topic of interest--for this post, we chose [homing pigeons](https://en.wikipedia.org/wiki/Homing_pigeon). We'll show how to prepare your data, index into a vector store, then query it. \n",
     "\n",
-    "One of the nice things about running an LLM locally is privacy. You can mix both both \"public data\" like Wikipedia pages and \"private data\" without worrying about sharing your data with a third party. Private data could include e.g. your private notes on a topic or PDFs of classified content. As long as you use a local LLM (and a local vector store), you won't have to worry about leaking data. Below, we'll show how to combine both types of data. Our vector store will include Wikipedia pages, an Army manual on caring for homing pigeons, and some brief notes we took while we were reading about this topic. \n",
+    "One of the nice things about running an LLM locally is privacy. You can mix both \"public data\" like Wikipedia pages and \"private data\" without worrying about sharing your data with a third party. Private data could include e.g. your private notes on a topic or PDFs of classified content. As long as you use a local LLM (and a local vector store), you won't have to worry about leaking data. Below, we'll show how to combine both types of data. Our vector store will include Wikipedia pages, an Army manual on caring for homing pigeons, and some brief notes we took while we were reading about this topic. \n",
     "\n",
     "To get started, download our example data:"
    ]
@@ -503,7 +497,7 @@
    "source": [
     "### Query your research assistant\n",
     "\n",
-    "Now, we can ask some questions about homing pigeons.\n"
+    "Finally, we're ready to ask some questions about homing pigeons.\n"
    ]
   },
   {
