--- a/example.ipynb
+++ b/example.ipynb
@@ -298,7 +298,7 @@
    "outputs": [],
    "source": [
     "# Install llama-index\n",
-    "!pip install llama-index\n",
+    "!pip install llama-index-core\n",
     "# Install llamafile integrations and SimpleWebPageReader\n",
     "!pip install llama-index-embeddings-llamafile llama-index-llms-llamafile llama-index-readers-web"
    ]
